--- a/jobs/北京开拓创想济南分公司.md
+++ b/jobs/北京开拓创想济南分公司.md
@@ -1,5 +1,41 @@
 北京开拓创想济南分公司
 ==========
 
-####公司介绍
+###公司介绍
+北京开拓创想科技有限公司是中国领先的移动应用软件产品及服务提供商，一家专注于高端移动互联网服务产品研发的移动互联网公司。公司网址[www.ktcx.cn](http://www.ktcx.cn)
 
+###职位
+
+####1.iOS开发工程师
+'''
+岗位描述
+1.负责公司产品线程序的设计、开发、调试和维护
+2.根据产品需求完成架构和模块设计
+3.改善软件的易用性，提升用户使用体验
+4.能与和产品经理、美工进行有效的沟通
+5.提供济南市有竞争力的待遇
+'''
+
+'''
+岗位要求
+1.具有两年左右iOS平台开发经验，熟悉iPhone平台界面开发和网络开发
+2.熟悉iPhone SDK开发环境及底层调用
+3.具备扎实的Objective C、C语言基础；熟悉XCode开发环境； 熟悉图形界面开发
+4.熟悉json、xml等数据交互的解析
+6.有iPhone上或App Store线上作品者，有独立开发项目经验的优先
+7.热爱技术，有开源模块积累者优先
+8.本职位不限制学历、看能力、不出差、请带作品
+'''
+####2.web前端工程师
+'''
+岗位描述
+1.负责产品界面详细设计和核心代码开发
+2.负责软件产品bug修改、代码优化及产品需求开发
+3.负责其它有挑战性的工作
+4.能搞微信公众平台开发、wapapp、html5技术方向
+'''
+
+'''
+岗位要求
+
+'''
