--- a/jobs/北京开拓创想济南分公司.md
+++ b/jobs/北京开拓创想济南分公司.md
@@ -14,7 +14,7 @@
 4. 能与和产品经理、美工进行有效的沟通
 5. 提供济南市有竞争力的待遇
 
-#####岗位要求
+#####岗位要求:
 1. 具有两年左右iOS平台开发经验，熟悉iPhone平台界面开发和网络开发
 2. 熟悉iPhone SDK开发环境及底层调用
 3. 具备扎实的Objective C、C语言基础；熟悉XCode开发环境； 熟悉图形界面开发
@@ -24,8 +24,18 @@
 8. 本职位不限制学历、看能力、不出差、请带作品
 
 ####2.web前端工程师
-#####岗位描述
+#####岗位描述:
 1. 负责产品界面详细设计和核心代码开发
 2. 负责软件产品bug修改、代码优化及产品需求开发
 3. 负责其它有挑战性的工作
 4. 能搞微信公众平台开发、wapapp、html5技术方向
+
+#####岗位要求:
+1. 精通HTML5/CSS3，jQuery及主流的JavaScript框架，熟悉常用前端开发框架如Bootstrap,Angular.js,Backbone等，两年以上相关开发经验
+2. 熟悉页面架构和布局以及跨浏览器、跨终端开发
+3. 了解IOS,Android移动平台Web开发技术标准，熟悉手机端和PC端web实现的差异，有移动平台web前端开发经验，了解移动互联网产品和行业
+4. 对HTML5技术领域、新兴web标准和web发展趋势有极高的关注度，具有很强的学习能力和对新技术孜孜以求的精神
+5. 有较强的团队意识，沟通理解能力强，吃苦耐劳
+
+###联系方式
+发送简历到[zhaoyunhello@gmail.com](mailto:zhaoyunhello@gmail.com)
