--- a/jobs/济南奥维信息科技有限公司.md
+++ b/jobs/济南奥维信息科技有限公司.md
@@ -2,7 +2,8 @@
 ==========
 
 ###公司介绍
-简短的公司简介
+济南奥维信息科技有限公司前身为济南奥维软件有限公司技术部，于2011年独立，并与山东新视觉资讯科技有限公司研发部合并，成立专业技术研发公司，是具有独立法人资格的高新技术企业。公司致力于数字媒体研发技术，拥有一支经验丰富、实力强大的技术队伍，拥有一流的科研开发环境和先进的信息通讯设施。公司总部位于济南高新区舜泰广场，拥有员工60余人。
+公司与山东大学合作设立数字多媒体工程技术中心，开展图像领域的科研及开发，其中高度真实感大规模渲染课题入选国家科技部863科技计划，飞翔影院研发与示范项目入选国家科技支撑项目。
 
 ###职位
 ####1.java软件工程师
@@ -31,4 +32,4 @@
 济南高新区舜泰广场1号楼东6-B3区
 
 ###联系方式
-发送简历到[zhaoyunhello@gmail.com](mailto:zhaoyunhello@gmail.com)
+发送简历到[305025210@qq.com](mailto:305025210@qq.com) 萌妹子一枚
